--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,22 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    <style name="Average">
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="Average.Horizontal">
+        <item name="android:layout_width">0dp</item>
+    </style>
+
+    <style name="Average.Vertical">
+        <item name="android:layout_height">0dp</item>
+    </style>
+
+    <style name="Average.Horizontal.JournalHeadButton">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:padding">68dp</item>
+        <item name="android:tint">@color/white</item>
     </style>
 
 </resources>
