--- a/app/src/main/res/layout/h_journal.xml
+++ b/app/src/main/res/layout/h_journal.xml
@@ -1,26 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/btn_photo"
+            style="@style/Average.Horizontal.JournalHeadButton"
+            android:src="@drawable/ic_add_a_photo" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimaryDark" />
+
+        <ImageView
+            android:id="@+id/btn_add"
+            style="@style/Average.Horizontal.JournalHeadButton"
+            android:src="@drawable/ic_add" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/tv_lab_count"
+                style="@style/Average.Vertical.JournalHeadLab"
+                android:text="3" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="个条目"
+                android:textColor="@color/textLight"
+                android:textSize="8dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/tv_lab_days"
+                style="@style/Average.Vertical.JournalHeadLab"
+                android:text="2" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="天"
+                android:textColor="@color/textLight"
+                android:textSize="8dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/tv_lab_picture_count"
+                style="@style/Average.Vertical.JournalHeadLab"
+                android:text="3" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="张照片"
+                android:textColor="@color/textLight"
+                android:textSize="8dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/tv_lab_week_count"
+                style="@style/Average.Vertical.JournalHeadLab"
+                android:text="3" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="本周"
+                android:textColor="@color/textLight"
+                android:textSize="8dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/tv_lab_today_count"
+                style="@style/Average.Vertical.JournalHeadLab"
+                android:text="3" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="今天"
+                android:textColor="@color/textLight"
+                android:textSize="8dp" />
+        </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/btn_photo"
-        style="@style/Average.Horizontal.JournalHeadButton"
-        android:src="@drawable/ic_add_a_photo" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark" />
-
-    <ImageView
-        android:id="@+id/btn_add"
-        style="@style/Average.Horizontal.JournalHeadButton"
-        android:src="@drawable/ic_add" />
-
+    </LinearLayout>
 
 </LinearLayout>
