--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,11 @@
         <item name="android:tint">@color/white</item>
     </style>
 
+    <style name="Average.Vertical.JournalHeadLab">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">@color/textLight</item>
+        <item name="android:gravity">center_horizontal|bottom</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
 </resources>
