--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="AppTheme.LightTheme">
+        <item name="colorPrimary">@color/white</item>
+        <item name="windowActionBar">false</item>
+    </style>
 </resources>
