--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="custom_actionbar_size">48dp</dimen>
 
     <dimen name="list_item_size">48dp</dimen>
+    <dimen name="edit_bar_size">48dp</dimen>
 
 </resources>
