--- a/app/src/main/res/layout/a_main.xml
+++ b/app/src/main/res/layout/a_main.xml
@@ -9,8 +9,23 @@
     tools:context="com.eirture.easy.main.view.MainA">
 
 
-    <include layout="@layout/h_main_action_bar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary">
 
+        <TextView
+            android:id="@+id/btn_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableRight="@drawable/ic_arrow_down"
+            android:gravity="center_vertical"
+            android:padding="4dp"
+            android:text="日记本"
+            android:textColor="@color/white" />
+
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/container"
