--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,15 @@
         <item name="android:textSize">12dp</item>
     </style>
 
+    <style name="EditBarButtonStyle">
+        <item name="android:layout_height">@dimen/edit_bar_size</item>
+        <item name="android:layout_width">@dimen/edit_bar_size</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="EditBarButtonStyle.Text">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
 </resources>
