--- a/app/src/main/res/menu/editor.xml
+++ b/app/src/main/res/menu/editor.xml
@@ -3,16 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_preview"
-        android:actionLayout="@layout/a_edit"
-        android:title="@string/preview"
-        app:showAsAction="always" />
-
-
-    <item
-        android:id="@+id/menu_finish"
+        android:id="@+id/menu_btn"
         android:actionLayout="@layout/a_edit"
         android:title="@string/finish"
-
         app:showAsAction="always" />
+
 </menu>
