--- a/app/src/main/res/layout/i_journal.xml
+++ b/app/src/main/res/layout/i_journal.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/sel_item_click"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:paddingBottom="4dp"
     android:paddingLeft="8dp"
