--- a/app/src/main/res/layout/i_journal.xml
+++ b/app/src/main/res/layout/i_journal.xml
@@ -18,14 +18,14 @@
         tools:src="@drawable/default_head" />
 
     <LinearLayout
-        android:layout_width="40dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_marginLeft="1dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_two"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/tv_photo_count"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="24dp"
             android:layout_marginTop="1dp"
             android:background="@color/backgroundBlack"
