--- a/app/src/main/res/layout/i_journal.xml
+++ b/app/src/main/res/layout/i_journal.xml
@@ -72,7 +72,7 @@
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="right"
         android:text="星期一\n05"
