--- a/app/src/main/res/layout/h_journal.xml
+++ b/app/src/main/res/layout/h_journal.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -19,7 +19,7 @@
             android:layout_width="1dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/transparentBlack" />
 
         <ImageView
             android:id="@+id/btn_add"
