--- a/app/src/main/res/layout/l_calendar_item.xml
+++ b/app/src/main/res/layout/l_calendar_item.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tv_content"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:background="@drawable/sel_item_calendar"
-    android:gravity="center"
-    android:textColor="@color/sel_black_white"
-    tools:text="1" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/sel_item_calendar"
+        android:gravity="center"
+        android:textColor="@color/sel_black_white"
+        tools:text="1" />
+</FrameLayout>
