--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="custom_actionbar_size">48dp</dimen>
 
     <dimen name="list_item_size">48dp</dimen>
+    <dimen name="list_item_image_size">24dp</dimen>
     <dimen name="edit_bar_size">48dp</dimen>
 
 </resources>
