--- a/app/src/main/res/layout/i_journal.xml
+++ b/app/src/main/res/layout/i_journal.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/i_group_lab" />
 
     <LinearLayout
+        android:id="@+id/item_journal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/sel_item_click"
