--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,4 +68,39 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="ListItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/list_item_size</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">12dp</item>
+    </style>
+
+    <style name="ListItem.LinerLayout">
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="ListItem.TextView">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/textBlack</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="InputPasswordItem">
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/sel_btn_gray</item>
+    </style>
+
+    <style name="InputPasswordTextView" parent="InputPasswordItem">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="InputPasswordRow">
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
 </resources>
