--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,14 +93,14 @@
     <style name="InputPasswordTextView" parent="InputPasswordItem">
         <item name="android:gravity">center</item>
         <item name="android:textSize">24dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="InputPasswordRow">
         <item name="android:layout_marginLeft">12dp</item>
         <item name="android:layout_marginRight">12dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:layout_marginTop">16dp</item>
     </style>
 
 </resources>
