--- a/app/src/main/res/layout/a_notification.xml
+++ b/app/src/main/res/layout/a_notification.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgGray"
@@ -61,9 +62,9 @@
             android:drawablePadding="8dp"
             android:drawableRight="@drawable/ic_arrow_gray_right"
             android:gravity="center_vertical"
-            android:text="每天21:00"
             android:textColor="@color/colorPrimary"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            tools:text="每天21:00" />
 
     </LinearLayout>
 
