--- a/app/src/main/res/drawable/sel_item_calendar.xml
+++ b/app/src/main/res/drawable/sel_item_calendar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ripple_primary_click" android:state_pressed="true" />
+    <!--<item android:drawable="@drawable/ripple_primary_click" android:state_pressed="true" />-->
     <item android:drawable="@drawable/circle_bg_calendar_item" android:state_selected="true" />
     <item android:drawable="@color/transparent" />
 </selector>
