--- a/app/src/main/res/layout/a_register.xml
+++ b/app/src/main/res/layout/a_register.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -23,29 +22,40 @@
             style="@style/EditorBarStyle.white"
             android:layout_marginTop="48dp"
             android:drawableLeft="@drawable/ic_account"
-            android:hint="@string/account" />
+            android:ems="16"
+            android:hint="@string/account"
+            android:imeOptions="actionNext"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/et_email"
             style="@style/EditorBarStyle.white"
             android:drawableLeft="@drawable/ic_email"
-            android:hint="@string/email" />
+            android:ems="10"
+            android:hint="@string/email"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress" />
 
 
         <EditText
             android:id="@+id/et_password"
             style="@style/EditorBarStyle.white"
             android:drawableLeft="@drawable/ic_lock"
-            android:hint="@string/password" />
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/et_password_confirm"
             style="@style/EditorBarStyle.white"
             android:drawableLeft="@drawable/ic_lock"
-            android:hint="@string/password_confirm" />
+            android:ems="10"
+            android:hint="@string/password_confirm"
+            android:inputType="textPassword" />
 
 
         <TextView
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_bar_size"
             android:layout_marginTop="32dp"
