--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,6 +116,7 @@
         <item name="android:paddingRight">12dp</item>
         <item name="android:drawablePadding">12dp</item>
         <item name="android:background">@null</item>
+        <item name="android:lines">1</item>
     </style>
 
     <style name="EditorBarStyle.white">
