--- a/app/src/main/res/layout/a_sync.xml
+++ b/app/src/main/res/layout/a_sync.xml
@@ -34,4 +34,12 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="* 登录后才可启用同步服务" />
 </LinearLayout>
